# genai-system-patterns

./: .gitignore  LICENSE  README.md  pyproject.toml
agents/: README.md  tool_using_agent.py
evaluation/: README.md  retrieval_metrics.py
foundations/: README.md  embedding_management.py  model_interface.py
ops/: README.md  cost_monitoring.py
rag/: README.md  basic_rag.py
security_governance/: README.md  input_validation.py
